# ife-project

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  leaderboards.txt~  project-test.cbp  project.cbp  report.md  report.tex
projet/: projet.cbp  projet.depend  projet.layout
report/: charset.eps
src/: ai.c  ai.h  display.c  display.h  game.c  game.h  leaderboards.c  leaderboards.h  main.c  rules.c  rules.h
test/: ai.c  ai.h  game.c  game.h  main.c  rules.c  rules.h  test.h
